--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,4 +1,59 @@
 {
-     "10% Off on First Order. Code: WELCOME10":"10% Off on First Order. Code: WELCOME10",
-      "Free Shipping on Orders AED200+": "Free Shipping on Orders AED200+"
-}
+      "10% Off on First Order. Code: WELCOME10":"10% Off on First Order. Code: WELCOME10",
+       "Free Shipping on Orders AED200+": "Free Shipping on Orders AED200+",
+       "Shipping from Riyadh across Saudi Arabia":"Shipping from Riyadh across Saudi Arabia",
+       "Apple Pay":"Apple Pay",
+       "Disney Golden Princess":"Disney Golden Princess",
+       "Birthdays":"Birthdays",
+       "Balloons":"Balloons",
+       "Costumes":"Costumes",
+       "Decorations":"Decorations",
+       "Party Favours":"Party Favours",
+       "Theme Parties":"Theme Parties",
+       "Baby Events":"Baby Events",
+       "Special Occasions":"Special Occasions",
+       "Holiday Seasons":"Holiday Seasons",
+       "Shop By Category":"Shop By Category",
+       "Latest Collection of Costumes":"Latest Collection of Costumes",
+       "Shop For":"Shop For",
+       "BALLOONS":"BALLOONS",
+        "OCCASIONS":"OCCASIONS",
+        "COSTUMES":"COSTUMES",
+        "Ships from Riyadh across Saudi Arabia":"Ships from Riyadh across Saudi Arabia",
+        "Safety Tested":"Safety Tested",
+        "SLicensed Merchandise":"SLicensed Merchandise",
+        "Secure Payments":"Secure Payments",
+         "Largest Collection": "Largest Collection",
+         "Disney Costumes":"Disney Costumes",
+         "Boys Party Costumes":"Boys Party Costumes",
+         "Girls Party Costumes":"Girls Party Costumes",
+         "Toddler Costumes":"Toddler Costumes",
+         "Girls Birthday Themes":"Girls Birthday Themes",
+         "Boys Birthday Themes":"Boys Birthday Themes",
+         "Valentine's Day Tableware":"Valentine's Day Tableware",
+         "Valentine's Day Balloons":"Valentine's Day Balloons",
+         "Valentine's Day Decorations":"Valentine's Day Decorations",
+         "Star Wars":"Star Wars",
+         "Candles Accessories":"Candles Accessories",
+         "Girl Birthday party":"Girl Birthday party",
+         "Boy Birthday Party":"Boy Birthday Party",
+         "Baby Shark":"Baby Shark",
+          "Graduation Tableware": "Graduation Tableware",
+          "Halloween":"Halloween",
+           "New Year": "New Year",
+           "1st Birthday":"1st Birthday",
+           "Children's Birthday":"Children's Birthday",
+           "Adult Birthday":"Adult Birthday",
+           "Bridal Shower":"Bridal Shower",
+            "Wedding": "Wedding",
+            "Your Cart":"Your Cart",
+            "Image":"Image",
+            "Products":"Products",
+            "Quantity":"Quantity",
+            "Price":"Price",
+            "Total Price":"Total Price",
+            "No items in the cart":"No items in the cart",
+            "Clear Cart":"Clear Cart",
+            "Collection Products":"Collection Products",
+            "There are":"There are"
+ }
