--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -59,6 +59,16 @@
     "Collection Products":"منتجات المجموعة",
     "There are":"هناك",
    "Cart":"العربة",
-   "Account":"حساب"
- 
+   "Account":"حساب",
+
+   "In-store Pick-Up":"الاستلام من المتجر",
+   "Registered in KSA":"مسجلة في المملكة العربية السعودية",
+   "100% Authentic":"أصلي 100%",
+   "Free Shipping on Orders SAR 250+":"شحن مجاني للطلبات بقيمة 250 ريال سعودي أو أكثر",
+    "Folow Us":"تابعنا",
+    "PARTYCENTRE":"مركز الحفلات",
+    "Instagram":"انستجرام",
+    "Translation missing: en.general.social.tiktok":"الترجمة مفقودة: en.general.social.tiktok",
+    "Facebook":"فيسبوك",
+    "YouTube":"يوتيوب"
 }
