--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -57,6 +57,16 @@
             "Clear Cart":"Clear Cart",
             "Collection Products":"Collection Products",
             "There are":"There are",
-            "Cart":"العربة",
-            "Account":"Account"
+            "Cart":"Cart",
+            "Account":"Account",
+            "In-store Pick-Up":"In-store Pick-Up",
+            "Registered in KSA":"Registered in KSA",
+            "100% Authentic":"100% Authentic",
+            "Free Shipping on Orders SAR 250+":"Free Shipping on Orders SAR 250+",
+            "Folow Us":"Folow Us",
+            "PARTYCENTRE":"PARTYCENTRE",
+             "Instagram":"Instagram",
+             "Translation missing: en.general.social.tiktok":"Translation missing: en.general.social.tiktok",
+             "Facebook":"Facebook",
+             "YouTube":"YouTube"
  }
