collection translation new

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -70,5 +70,7 @@
     "Instagram":"انستجرام",
     "Translation missing: en.general.social.tiktok":"الترجمة مفقودة: en.general.social.tiktok",
     "Facebook":"فيسبوك",
-    "YouTube":"يوتيوب"
+    "YouTube":"يوتيوب",
+    "Pinterest":"بينتريست",
+    "Contact Us":"اتصل بنا"
 }
