--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -68,5 +68,7 @@
              "Instagram":"Instagram",
              "Translation missing: en.general.social.tiktok":"Translation missing: en.general.social.tiktok",
              "Facebook":"Facebook",
-             "YouTube":"YouTube"
+             "YouTube":"YouTube",
+             "Contact Us":"Contact Us",
+             "Pinterest":"Pinterest"
  }
