--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -1,5 +1,7 @@
 {
     "10% Off on First Order. Code: WELCOME10":"خصم ١٠٪؜ على اول طلب الكود: WELCOME10",
+    "10% Off on First Order. Code:":"خصم 10% على الطلب الأول. الكود:",
+    "WELCOME10":"مرحبا بكم 10",
     "Free Shipping on Orders AED200+":"شحن مجاني للطلبات التي تزيد عن 250 ريال سعودي",
     "Free shipping for orders over 250 SAR":"شحن مجاني للطلبات التي تزيد عن 250 ريال سعودي",
     "Shipping from Riyadh across Saudi Arabia":"الشحن من الرياض عبر المملكة العربية السعودية",
@@ -60,10 +62,17 @@
     "There are":"هناك",
    "Cart":"العربة",
    "Account":"حساب",
+   "Sort By:":"الترتيب حسب:",
+   "Default":"تقصير",
+   "Price: Low to High":"السعر: من الأدنى إلى الأعلى",
+   "Price: High to Low":"السعر: من الأعلى إلى الأدنى",
+   "Name: A to Z":"الاسم: من الألف إلى الياء",
+   "Name: Z to A":"الاسم: من الياء إلى الألف",
 
    "In-store Pick-Up":"الاستلام من المتجر",
    "Registered in KSA":"مسجلة في المملكة العربية السعودية",
    "100% Authentic":"أصلي 100%",
+   "Popular Searches":"عمليات البحث الشائعة",
    "Free Shipping on Orders SAR 250+":"شحن مجاني للطلبات بقيمة 250 ريال سعودي أو أكثر",
     "Folow Us":"تابعنا",
     "PARTYCENTRE":"مركز الحفلات",
@@ -72,5 +81,75 @@
     "Facebook":"فيسبوك",
     "YouTube":"يوتيوب",
     "Pinterest":"بينتريست",
-    "Contact Us":"اتصل بنا"
+    "Contact Us":"اتصل بنا",
+    "VAT ID":"عيد الفطر",
+    "CR No":"رقم السجل التجاري",
+    "Blue Path International Trading Co. Branch":"فرع شركة بلو باث للتجارة الدولية",
+    "SIGN UP":"اشتراك",
+    "Get access on exclusive offers and promotions and get 10% off your first order!":"احصل على العروض الحصرية والعروض الترويجية واحصل على خصم 10% على طلبك الأول!",
+    "Login/ Register":"تسجيل الدخول/التسجيل",
+    "Wishlist":"قائمة الرغبات",
+    "Delivery Information":"معلومات التسليم",
+    "Become an Affiliate":"كن شريكًا",
+    "Company":"شركة",
+    "About Us":"معلومات عنا",
+    "Privacy":"خصوصية",
+    "Security Policy":"سياسة الأمن",
+    "Terms":"شروط",
+    "Conditions":"شروط",
+    "Our Services":"خدماتنا",
+    "Consumer Rights":"حقوق المستهلك",
+    "Party Tips":"نصائح للحفلات",
+    "Ideas":"الأفكار",
+
+    "Top Categories":"أفضل الفئات",
+    "Christmas Decorations":"زينة عيد الميلاد",
+    "New Year Party Decor":"ديكورات حفلات رأس السنة",
+    "Disney Party Supplies":"لوازم حفلات ديزني",
+    "Balloon Decorations":"ديكورات البالونات",
+    "Theme Party Supplies":"لوازم الحفلات ذات الطابع الخاص",
+    "Costumes For Everyone":"ازياء للجميع",
+    "Customer Care":"خدمة العملاء",
+    "Brands":"العلامات التجارية",
+    "Safety":"أمان",
+    "Quality":"جودة",
+    "Size Guide":"دليل المقاسات",
+    "Share Feedback":"شارك بتعليقاتك",
+    "Event Central":"مركز الحدث",
+    "New Year Decorations":"ديكورات السنة الجديدة",
+    "New Year Party Kits":"أطقم حفلات رأس السنة",
+    "New Year Balloons":"بالونات السنة الجديدة",
+    "New Year Tableware":"أدوات المائدة للعام الجديد",
+     "Birthday Balloons":"بالونات عيد الميلاد",
+     "Princess Belle":"الأميرة بيل",
+     "Princess Cinderella":"الأميرة سندريلا",
+     "Princess Jasmine":"الأميرة ياسمين",
+     "Princess Ariel":"الأميرة آرييل",
+     "Princess Aurora":"الأميرة أورورا",
+     "Marvel party supplies":"لوازم حفلات مارفل",
+     "Disney Decorations":"ديكورات ديزني",
+     "Spiderman Decorations":"ديكورات سبايدرمان",
+     "Marvel Costumes":"ازياء مارفل",
+     "Avengers Decorations":"ديكورات المنتقمون",
+     "Baby Costumes":"ازياء الاطفال",
+     "Superhero Costumes":"أزياء الأبطال الخارقين",
+     "5 Reasons To Shop With Us":"5 أسباب للتسوق معنا",
+     "Home Delivery":"التوصيل إلى المنازل",
+     "Secure Payment":"الدفع الآمن",
+     "Free Shipping SAR 250+":"شحن مجاني 250 ريال سعودي+",
+     "WHAT ARE YOU PLANNING TO CELEBRATE?":"ما الذي تخطط للاحتفال به؟",
+     "ADD TO CART":"أضف إلى السلة",
+     "BIG BALLOONS":"بالونات كبيرة",
+     "BOUQUET BALLOONS":"بالونات الباقة",
+     "BIRTHDAY BALLOONS":"بالونات عيد الميلاد",
+     "GRADUATION":"تخرُّج",
+     "BIRTHDAY":"عيد ميلاد",
+     "BABY SHOWER":"حفل استقبال المولود",
+     "TODDLERS":"الأطفال الصغار",
+     "BOYS":"الأولاد",
+     "GIRLS":"فتيات",
+     "Available Offers":"العروض المتاحة",
+     "10% Off on Your First Purchase":"خصم 10% على عملية الشراء الأولى",
+     "Know More":"اعرف المزيد"
+
 }
