--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -70,5 +70,81 @@
              "Facebook":"Facebook",
              "YouTube":"YouTube",
              "Contact Us":"Contact Us",
-             "Pinterest":"Pinterest"
+             "Pinterest":"Pinterest",
+             "VAT ID":"VAT ID",
+             "CR No":"CR No",
+             "Blue Path International Trading Co. Branch":"Blue Path International Trading Co. Branch",
+             "SIGN UP":"SIGN UP",
+             "Get access on exclusive offers and promotions and get 10% off your first order!":"Get access on exclusive offers and promotions and get 10% off your first order!",
+             "Login/ Register":"Login/ Register",
+             "Wishlist":"Wishlist",
+             "Delivery Information":"Delivery Information",
+             "Become an Affiliate":"Become an Affiliate",
+             "Company":"Company",
+             "About Us":"About Us",
+             "Privacy":"Privacy",
+             "Security Policy":"Security Policy",
+             "Terms":"Terms",
+             "Conditions":"Conditions",
+             "Our Services":"Our Services",
+             "Consumer Rights":"Consumer Rights",
+             "Party Tips":"Party Tips",
+             "Ideas":"Ideas",
+             "Top Categories":"Top Categories",
+             "Christmas Decorations":"Christmas Decorations",
+            "New Year Party Decor":"New Year Party Decor",
+            "Disney Party Supplies":"Disney Party Supplies",
+            "Balloon Decorations":"Balloon Decorations",
+            "Theme Party Supplies":"Theme Party Supplies",
+            "Costumes For Everyone":"Costumes For Everyone",
+            "Customer Care":"Customer Care",
+            "Brands":"Brands",
+            "Safety":"Safety",
+            "Quality":"Quality",
+            "Size Guide":"Size Guide",
+            "Share Feedback":"Share Feedback",
+            "Event Central":"Event Central",
+            "New Year Decorations": "New Year Decorations",
+            "New Year Party Kits":"New Year Party Kits",
+            "New Year Balloons":"New Year Balloons",
+            "New Year Tableware":"New Year Tableware",
+            "Birthday Balloons":"Birthday Balloons",
+            "Princess Belle":"Princess Belle",
+            "Princess Cinderella":"Princess Cinderella",
+            "Princess Jasmine":"Princess Jasmine",
+            "Princess Ariel":"Princess Ariel",
+            "Princess Aurora":"Princess Aurora",
+             "Marvel party supplies": "Marvel party supplies",
+             "Disney Decorations":"Disney Decorations",
+             "Spiderman Decorations":"Spiderman Decorations",
+             "Marvel Costumes":"Marvel Costumes",
+             "Avengers Decorations":"Avengers Decorations",
+             "Baby Costumes":"Baby Costumes",
+             "Superhero Costumes":"Superhero Costumes",
+             "Popular Searches":"Popular Searches",
+             "Home Delivery":"Home Delivery",
+             "Secure Payment":"Secure Payment",
+             "Free Shipping SAR 250+":"Free Shipping SAR 250+",
+             "WHAT ARE YOU PLANNING TO CELEBRATE?":"WHAT ARE YOU PLANNING TO CELEBRATE?",
+             "ADD TO CART":"ADD TO CART",
+             "BIG BALLOONS":"BIG BALLOONS",
+             "BOUQUET BALLOONS":"BOUQUET BALLOONS",
+             "BIRTHDAY BALLOONS":"BIRTHDAY BALLOONS",
+             "GRADUATION":"GRADUATION",
+             "BIRTHDAY":"BIRTHDAY",
+             "BABY SHOWER":"BABY SHOWER",
+             "TODDLERS":"TODDLERS",
+             "BOYS":"BOYS",
+             "GIRLS":"GIRLS",
+            "Sort By:":"Sort By:",
+            "Default": "Default",
+            "Price: Low to High":"Price: Low to High",
+            "Price: High to Low":"Price: High to Low",
+            "Name: A to Z":"Name: A to Z",
+            "Name: Z to A":"Name: Z to A",
+            "Available Offers":"Available Offers",
+            "10% Off on Your First Purchase":"10% Off on Your First Purchase",
+             "Know More": "Know More"
+
+
  }
