--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -150,6 +150,7 @@
      "GIRLS":"فتيات",
      "Available Offers":"العروض المتاحة",
      "10% Off on Your First Purchase":"خصم 10% على عملية الشراء الأولى",
-     "Know More":"اعرف المزيد"
-
+     "Know More":"اعرف المزيد",
+     "descriptionpdp":"من المعروف منذ زمن طويل أن القارئ سوف يشتت انتباهه المحتوى المقروء لصفحة ما عند النظر إلى شكلها الخارجي والداخلي. والهدف من استخدام لوريم إيبسوم هو أنه يحتوي على توزيع طبيعي إلى حد ما للأحرف، على عكس استخدام .",
+    "shiping":"الإرجاع والاسترداد: في partycentre.sa (علامة تجارية لشركة Bluepath International في المملكة العربية السعودية) نسعى جاهدين لتوفير سياسة إرجاع خالية من المتاعب تمامًا لجميع عملائنا. إذا لم تكن راضيًا تمامًا عن طلبك، فما عليك سوى إرجاع العنصر (العناصر) إلينا في غضون 14 يومًا من تاريخ الشراء. تعرف على المزيد من التفاصيل حول الإرجاع والاسترداد هنا"
 }
