--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -146,7 +146,10 @@
             "10% Off on Your First Purchase":"10% Off on Your First Purchase",
              "Know More": "Know More",
              "descriptionpdp":"It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using .",
-             "shiping":"Returns & Refunds: At partycentre.sa (a brand of Bluepath International in Saudi Arabia) we strive to provide a completely hassle free return policy to all our customers. If you are not completely satisfied with your order, simply return the item(s) to us within 14 days from the date of purchase. Know more details about returns and refunds here"
-
+             "shiping":"Returns & Refunds: At partycentre.sa (a brand of Bluepath International in Saudi Arabia) we strive to provide a completely hassle free return policy to all our customers. If you are not completely satisfied with your order, simply return the item(s) to us within 14 days from the date of purchase. Know more details about returns and refunds here",
+             "Description":"Description",
+             "Ratings":"Ratings",
+             "Shipping & Returns":"Shipping & Returns",
+             "Recommended Products":"Recommended Products"
 
  }
