--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -156,5 +156,6 @@
     "Description":"وصف",
     "Ratings":"التقييمات",
     "Shipping & Returns":"الشحن والإرجاع",
-    "Recommended Products":"المنتجات الموصى بها"
+    "Recommended Products":"المنتجات الموصى بها",
+    "Search for products":"البحث عن المنتجات"
 } 
