--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -150,6 +150,7 @@
              "Description":"Description",
              "Ratings":"Ratings",
              "Shipping & Returns":"Shipping & Returns",
-             "Recommended Products":"Recommended Products"
+             "Recommended Products":"Recommended Products",
+             "Search for products":"Search for products"
 
  }
